// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit Log Streaming render with undefined data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageSubHeader--container StyledProps--flex"
    data-testid="page-subheader"
  >
    <button
      aria-label="auditTrail.logStreaming.newStreamingDestination"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        auditTrail.logStreaming.newStreamingDestination
      </span>
    </button>
    <span
      style="flex-grow: 1;"
    />
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main NoDataCard--noDataCard StyledProps--flex StyledProps--flex-align-center-center"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; margin-top: -48px; width: 470px;"
      >
        <img
          class="emptyStateImage"
          src="test-file-stub"
        />
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-bold StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          level="2"
        >
          auditTrail.emptyStateMessageTitle
        </h2>
        <p
          class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          auditTrail.emptyStateMessage
        </p>
        <div
          class="NoDataCard--buttonContainer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Audit Log Streaming render, click on newStreamingDestinationBtn and closeButton 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageSubHeader--container StyledProps--flex"
    data-testid="page-subheader"
  >
    <button
      aria-label="auditTrail.logStreaming.newStreamingDestination"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        auditTrail.logStreaming.newStreamingDestination
      </span>
    </button>
    <span
      style="flex-grow: 1;"
    />
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    AuditLogStreamingListView
  </div>
</div>
`;
